# annapurna

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cog.toml  flake.nix
.github/workflows/: containers.yaml  release.yaml
.sqlx/: query-10e56c41ccd5742622d1b310ea5c03c3198d315116f8a1ba459dced59fd411c9.json  query-cd2bf1878b660852d489b26acc18cd15986966c3a37d5ce95e66128cc0ab4ce1.json
crates/cli/: Cargo.toml
crates/cli/facts/: ingredients  ingredients.txt  inventory.ron  recipes.ron
crates/cli/src/: aggregators.rs  commands.rs  config.rs  example.rs  main.rs  named.rs  recipe.rs  tests.rs  types.rs
crates/cli/src/commands/: dev.rs  server.rs
crates/data/: Cargo.toml
crates/data/src/: lib.rs  types.rs
crates/http/: Cargo.toml
crates/http/src/: error.rs  lib.rs  serve.rs
crates/http/src/handlers/: inventory.rs
crates/logic/: Cargo.toml
crates/logic/src/: aggregators.rs  lib.rs  program.rs  recipe.rs  tests.rs
crates/models/: Cargo.toml
crates/models/src/: inventory.rs  lib.rs  task.rs
crates/service-worker/: Cargo.toml
crates/service-worker/src/: constants.rs  error.rs  lib.rs  state.rs  token.rs
crates/ui/: Cargo.toml
crates/ui/src/: api.rs  components.rs  lib.rs  main.rs  routing.rs  state.rs  util.rs
crates/ulid/: Cargo.toml
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
crates/watcher/: Cargo.toml
crates/watcher/src/: lib.rs
facts/: inventory.ron  todos.ron
flake-parts/: astro.nix  cargo.nix  ci.nix  containers.nix  pre-commit.nix  services.nix  shells.nix  web.nix
migrations/: 20240304015829_init.down.sql  20240304015829_init.up.sql
public/: index.html  sw-module.js
public/loader/: service_worker_loader.d.ts  service_worker_loader.js  service_worker_loader_bg.wasm  service_worker_loader_bg.wasm.d.ts
public/login-callback/: index.html
public/logout/: index.html
web/: astro.config.mjs  package.json
web/public/: serviceWorker.js
web/public/lib/: locks.js  message.js  worker-init.js  worker.js
web/src/: config.ts
web/src/components/: Header.astro  MainLayout.astro  ServiceWorker.astro
web/src/layouts/: default.astro
web/src/pages/: index.astro  login-callback.astro  logout.astro
