[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/justinrubek/annapurna"
repository = "https://github.com/justinrubek/annapurna"

[workspace.dependencies]
axum = "0.6.12"
anyhow = "1.0.68"
hyper = "0.14"
js-sys = "0.3.61"
notify = "5.1.0"
ron = "0.8.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1", features = ["full"] }
tower-http = "0.4.0"
thiserror = "1.0.38"
tracing = "0.1.37"
wasm-bindgen = "=0.2.87"
wasm-bindgen-futures = "0.4.34"

[profile.release]
# opt-level = 2 # fast and small wasm

