[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
homepage = "https://github.com/justinrubek/annapurna"
license = "MIT"
repository = "https://github.com/justinrubek/annapurna"
version = "0.2.2"

[workspace.dependencies]
anyhow = "1.0.68"
axum = "0.7"
axum-extra = "0.9"
base64 = "0.21.4"
js-sys = "0.3.61"
lockpad-auth = "0.4"
log = "0.4.20"
notify = "5.1.0"
ron = "0.8.0"
serde-wasm-bindgen = "0.4"
serde_json = "1"
thiserror = "1"
tower-http = "0.5.0"
tracing = "0.1.37"
wasm-bindgen = "=0.2.92"
wasm-bindgen-futures = "0.4.34"
wasm-logger = "0.2.0"

[workspace.dependencies.chrono]
version = "0.4"
features = ["serde"]

[workspace.dependencies.hyper]
version = "1.2"
features = ["client"]

[workspace.dependencies.reqwest]
version = "0.12"
features = ["rustls-tls", "json"]
default-features = false

[workspace.dependencies.serde]
version = "1"
features = ["derive"]

[workspace.dependencies.sqlx]
version = "0.7.3"
features = ["runtime-tokio-rustls", "macros", "postgres", "chrono", "uuid"]

[workspace.dependencies.tokio]
version = "1"
features = ["full"]

[profile.release.package]
