[package]
name = "annapurna"
edition = "2021"
version = "0.2.2"

[dependencies]
config = "0.13.3"
http-body = "0.4.5"
serde_json = "1.0.87"
tracing-subscriber = "0.3.16"

[dependencies.annapurna-data]
path = "../data"
features = []

[dependencies.annapurna-http]
path = "../http"
features = []

[dependencies.annapurna-logic]
path = "../logic"
features = []

[dependencies.clap]
version = "4.1.13"
features = ["derive"]

[dependencies.lockpad-auth]
features = []
workspace = true

[dependencies.reqwest]
version = "0.11.14"
features = ["rustls-tls", "json"]
default-features = false

[dependencies.ron]
features = []
workspace = true

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.sqlx]
features = []
workspace = true

[dependencies.tokio]
features = []
workspace = true

[dependencies.tracing]
features = []
workspace = true

[[bin]]
path = "src/main.rs"
name = "annapurna-cli"
required-features = []
