[package]
name = "annapurna-http"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
annapurna-data = { path = "../data" }
annapurna-ui = { path = "../ui", optional = true, features = ["ssr"] }
axum = { workspace = true, optional = true }
dioxus = "0.4.0"
futures-util = "0.3.28"
html_editor = "0.5.2"
http-body = "0.4.5"
hyper = { workspace = true, optional = true }
lockpad-auth = { version = "0.2.0", optional = true }
serde = { workspace = true }
serde_json = "1.0.87"
serde_urlencoded = "0.7.1"
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.3.0", features = ["fs", "cors", "map-response-body", "map-request-body", "util"], optional = true }
tower-layer = { version = "0.3.2", optional = true }
tracing = { workspace = true, optional = true }

[dependencies.dioxus-fullstack] 
version = "0.4.1"
default-features = false
features = ["rustls"]

[features]
default = []
ssr = ["dioxus-fullstack/axum", "dioxus-fullstack/ssr", "dep:axum", "dep:tokio", "dep:tower", "dep:tower-http", "dep:tower-layer", "dep:tracing", "dep:hyper", "dep:lockpad-auth"]
