[package]
name = "annapurna-logic"
version.workspace = true
edition.workspace = true

[dependencies]
annapurna-data = { path = "../data" }
ascent = "0.6"
serde.workspace = true
# serde_json = "1.0.87"
thiserror.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
ascent = { version = "0.6", features = ["wasm-bindgen"] }
