[package]
name = "annapurna-service-worker"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = { workspace = true }
gloo-utils = "0.2.0"
js-sys = { workspace = true }
log = { workspace = true }
rexie = "0.4.0"
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }
thiserror = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wasm-logger = { workspace = true }

[dependencies.web-sys]
version = "0.3.4"
features = [
    "console",
    "Clients",
    "ExtendableEvent",
    "ExtendableMessageEvent",
    "FetchEvent",
    "Headers",
    "Location",
    "Navigator",
    "Node",
    "Window",
    "RegistrationOptions",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "ServiceWorkerGlobalScope",
    "ServiceWorkerRegistration",
    "ServiceWorkerState",
    "ServiceWorker",
    "ServiceWorkerContainer",
    "Url",
    "Window",
    "WindowClient",
    "WorkerLocation",
    "WorkerGlobalScope",
]
