cargo-features = ["per-package-target"]

[package]
name = "annapurna-ui"
version = { workspace = true }
edition = { workspace = true }
forced-target = "wasm32-unknown-unknown"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
annapurna-data = { path = "../data" }
annapurna-logic = { path = "../logic" }
dioxus = "0.4.0"
dioxus-html = "0.4.0"
dioxus-router = "0.4.1"
dioxus-web = { version = "0.4.0", optional = true }
getrandom = { version = "0.2.8", features = ["js"] }
js-sys = { workspace = true }
reqwest = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-logger = "0.2.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
    "console",
    "AbortController",
    "CssStyleDeclaration",
    "Document",
    "Element",
    "HtmlElement",
    "Location",
    "Navigator",
    "Node",
    "Window",
    "RegistrationOptions",
    "ServiceWorkerGlobalScope",
    "ServiceWorkerRegistration",
    "ServiceWorkerState",
    "ServiceWorker",
    "ServiceWorkerContainer",
    "Url",
]

[dependencies.dioxus-fullstack] 
version = "0.4.1"
optional = true
default-features = false
features = ["rustls"]

[features]
default = []
ssr = ["dioxus-fullstack/axum", "dioxus-fullstack/ssr", "dep:dioxus-fullstack"]
web = ["dioxus-web", "dioxus-router/web"]
