cargo-features = ["per-package-target"]

[package]
name = "annapurna-ui"
version = { workspace = true }
edition = { workspace = true }
forced-target = "wasm32-unknown-unknown"

[lib]
crate-type = ["cdylib"]

[dependencies]
annapurna-data = { path = "../data" }
annapurna-logic = { path = "../logic" }
dioxus = { version = "0.5", features = ["launch", "web"] }
dioxus-html = "0.5"
dioxus-router = "0.5"
dioxus-web = "0.5"
getrandom = { version = "0.2.8", features = ["js"] }
js-sys = { workspace = true }
reqwest = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-logger = "0.2.0"

[dependencies.web-sys]
version = "0.3.68"
features = [
    "console",
    "AbortController",
    "AbortSignal",
    "CssStyleDeclaration",
    "Document",
    "Element",
    "HtmlElement",
    "Location",
    "Navigator",
    "Node",
    "Window",
    "RegistrationOptions",
    "RequestCredentials",
    "RequestInit",
    "ServiceWorkerGlobalScope",
    "ServiceWorkerRegistration",
    "ServiceWorkerState",
    "ServiceWorker",
    "ServiceWorkerContainer",
    "Url",
]
